<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb3_fusion_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rasp4@todo.todo">rasp4</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
